Code quality: fix bugs, modernise idioms, remove dead/redundant code (#776)
* chore: initial progress checkpoint before code quality fixes

* Code quality improvements: fix bugs, modernise Java idioms, remove redundant code

* Fix remaining Yoda condition in BookController.findBySearch

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>